--- a/www/ui/ionic/templates/main-shake-detect-settings.html
+++ b/www/ui/ionic/templates/main-shake-detect-settings.html
@@ -6,9 +6,9 @@
 </ion-button-bar> 
 <ion-list>
   <ion-item class="row" ng-repeat="entry in display_config">
-    <div class="col timestamp item-text-wrap control-info">{{entry.transitionName}}</div>
-    <div class="col detail item-text-wrap control-info"> {{entry.notifyOptions.id}}</div>
-    <div class="col timestamp item-text-wrap control-info">{{entry.notifyOptions.title}}</div>
+    <div class="col timestamp item-text-wrap control-info">{{entry.incidentName}}</div>
+    <div class="col detail item-text-wrap control-info"> {{entry.incidentOptions.id}}</div>
+    <div class="col timestamp item-text-wrap control-info">{{entry.incidentOptions.title}}</div>
     <ion-toggle ng-model="entry.enabled" ng-change="toggleEnable(entry)"></ion-toggle>
   </ion-item>
 </ion-list>
