--- a/www/ui/ionic/templates/shake-detect-display-detail.html
+++ b/www/ui/ionic/templates/shake-detect-display-detail.html
@@ -1,5 +1,5 @@
 
-              <div class="col timestamp item-text-wrap control-info">{{entry.transitionName}}</div>
-              <div class="col detail item-text-wrap control-info"> {{entry.notifyOptions.id}}</div>
-              <div class="col timestamp item-text-wrap control-info">{{entry.notifyOptions.title}}</div>
+              <div class="col timestamp item-text-wrap control-info">{{entry.incidentName}}</div>
+              <div class="col detail item-text-wrap control-info"> {{entry.incidentOptions.id}}</div>
+              <div class="col timestamp item-text-wrap control-info">{{entry.incidentOptions.title}}</div>
               <div class="col detail item-text-wrap control-info"> {{entry.enabled}}</div>
